k8s/manifests-d2df70/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-d2df70
  namespace: journee
  labels:
    app: journee-d2df70
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-d2df70
  template:
    metadata:
      labels:
        app: journee-d2df70
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-d2df70
          image: gcr.io/my-docker-471807/journee:v5.8.3
          ports:
            - containerPort: 3000
