k8s/manifests-d2df70/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-d2df70
  namespace: journee
spec:
  selector:
    app: journee-d2df70
  ports:
    - port: 80
      targetPort: 3000
